--- a/BugTracker/BugTracker.csproj
+++ b/BugTracker/BugTracker.csproj
@@ -196,36 +196,47 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Bug.cs" />
+    <Compile Include="Code\Bug.cs" />
+    <Compile Include="Code\Comment.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BugController.cs" />
     <Compile Include="Controllers\BugListController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Code\DatabaseConnection.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="BugModel.cs" />
+    <Compile Include="Code\BugModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Code\picture.cs" />
+    <Compile Include="Code\Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
-    <Compile Include="Startup.cs" />
+    <Compile Include="Code\Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Bugs.mdf" />
     <Content Include="App_Data\Bugs_log.ldf">
       <DependentUpon>Bugs.mdf</DependentUpon>
     </Content>
+    <Content Include="App_Data\Projects.mdf" />
+    <Content Include="App_Data\Projects_log.ldf">
+      <DependentUpon>Projects.mdf</DependentUpon>
+    </Content>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="BugList.html" />
+    <Content Include="Contributions.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Projects.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
