--- a/BugTracker/bin/BugTracker.dll.config
+++ b/BugTracker/bin/BugTracker.dll.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Bugs.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="ProjectsConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Projects.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
